--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -21,3 +21,11 @@ jobs:
           committer_branch: main
           committer_message: "chore(metrics): update github-metrics.svg"
           user: ${{ github.repository_owner }}
+          template: classic
+          config_timezone: Asia/Kolkata
+          plugin_isocalendar: yes
+          plugin_languages: yes
+          plugin_languages_sections: most-used
+          plugin_languages_details: bytes-size, percentage
+          plugin_stars: yes
+          plugin_achievements: yes
