--- a/.github/workflows/github-readme-stats.yml
+++ b/.github/workflows/github-readme-stats.yml
@@ -48,26 +48,35 @@ jobs:
             -e PAT_1="${{ steps.set-pat.outputs.PAT }}" \
             -e WHITELIST=yashranaway \
             ghcr.io/utkuozdemir/github-readme-stats-selfhosted:latest
-          
+
           # Wait for the server to be ready
           echo "Waiting for server to start..."
+          SERVER_READY=false
           for i in {1..30}; do
-            if curl -f http://localhost:9000/api?username=yashranaway > /dev/null 2>&1; then
+            if curl -sf http://localhost:9000/api?username=yashranaway > /dev/null 2>&1; then
               echo "Server is ready!"
+              SERVER_READY=true
               break
             fi
             echo "Waiting... ($i/30)"
             sleep 2
           done
 
+          if [ "$SERVER_READY" = false ]; then
+            echo "ERROR: Server failed to start within 60 seconds"
+            echo "Container logs:"
+            docker logs readme-stats
+            exit 1
+          fi
+
       - name: Generate stats image
         run: |
-          curl -o assets/github-stats/stats.svg \
+          curl -sf -o assets/github-stats/stats.svg \
             "http://localhost:9000/api?username=yashranaway&show_icons=true&hide_border=true&title_color=94b4a4&icon_color=FFFFFF&text_color=FFFFFF&bg_color=000000&count_private=true&include_all_commits=true"
 
       - name: Generate top languages image
         run: |
-          curl -o assets/github-stats/top-langs.svg \
+          curl -sf -o assets/github-stats/top-langs.svg \
             "http://localhost:9000/api/top-langs/?username=yashranaway&text_color=FFFFFF&bg_color=000000&title_color=94b4a4&langs_count=15&layout=compact&hide_border=true"
 
       - name: Stop container
