--- a/.github/workflows/github-readme-stats.yml
+++ b/.github/workflows/github-readme-stats.yml
@@ -1,4 +1,4 @@
-name: Generate GitHub Readme Stats
+name: Generate GitHub Profile Summary Cards
 
 on:
   schedule:
@@ -12,44 +12,26 @@ on:
       - '.github/workflows/github-readme-stats.yml'
 
 jobs:
-  generate-stats:
+  generate-cards:
     runs-on: ubuntu-latest
     permissions:
       contents: write
 
     concurrency:
-      group: github-readme-stats-${{ github.ref }}
+      group: github-profile-summary-cards-${{ github.ref }}
       cancel-in-progress: true
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Generate stats card
-        uses: readme-tools/github-readme-stats-action@v1
+      - name: Generate profile summary cards
+        uses: vn7n24fzkq/github-profile-summary-cards@release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          card: stats
-          options: username=yashranaway&show_icons=true&hide_border=true&title_color=94b4a4&icon_color=FFFFFF&text_color=FFFFFF&bg_color=000000&count_private=true&include_all_commits=true
-          path: assets/github-stats/stats.svg
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Generate top languages card
-        uses: readme-tools/github-readme-stats-action@v1
-        with:
-          card: top-langs
-          options: username=yashranaway&text_color=FFFFFF&bg_color=000000&title_color=94b4a4&langs_count=15&layout=compact&hide_border=true
-          path: assets/github-stats/top-langs.svg
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Commit and push changes
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-
-          if [ -n "$(git status --porcelain)" ]; then
-            git add assets/github-stats/*.svg
-            git commit -m "chore: update GitHub readme stats [skip ci]"
-            git push
-          else
-            echo "No changes to commit"
-          fi
+          USERNAME: yashranaway
+          BRANCH_NAME: main
+          UTC_OFFSET: 5
+          THEME: github_dark
+          AUTO_PUSH: true
